--- a/Views/LoginView.axaml
+++ b/Views/LoginView.axaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:contents="clr-namespace:ShadUI.Contents;assembly=ShadUI"
         xmlns:controls="clr-namespace:ShadUI.Controls;assembly=ShadUI"
-        xmlns:converters="clr-namespace:ShadUI.Demo.Converters"
+        xmlns:converters="clr-namespace:ShadUI.Converters;assembly=ShadUI"
 		xmlns:dialogs="clr-namespace:ShadUI.Dialogs;assembly=ShadUI"
         xmlns:extensions="clr-namespace:ShadUI.Extensions;assembly=ShadUI"
 		xmlns:toasts="clr-namespace:ShadUI.Toasts;assembly=ShadUI"
         mc:Ignorable="d" d:DesignWidth="1000" d:DesignHeight="700"
-        x:Class="AHON_TRACK.Views.MainWindow"
+        x:Class="AHON_TRACK.Views.LoginView"
         x:DataType="vm:LoginViewModel"
         Icon="/Assets/AHON-Track-Window.ico"
         WindowStartupLocation="CenterScreen"
