chore: add Card component to root file

--- a/App.axaml
+++ b/App.axaml
@@ -6,11 +6,20 @@
              RequestedThemeVariant="Light">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
+	<Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<!-- Your existing resources -->
+				<ResourceInclude Source="/Components/Dashboard/OverviewCard.axaml"/>
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</Application.Resources>
+	
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
   
     <Application.Styles>
 		<themes:ShadTheme />
-    </Application.Styles>
+	</Application.Styles>
 </Application>
